--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,67 @@
+
 .App {
   text-align: center;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
+  animation: App-logo-spin infinite 10s linear;
   height: 80px;
 }
 
 .App-header {
   background-color: #222;
-  height: 150px;
+  height: 50px;
   padding: 20px;
   color: white;
 }
 
 .App-title {
   font-size: 1.5em;
+  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  display: flex;
+  height: 50px;
 }
 
-.App-intro {
-  font-size: large;
+input, textarea {
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.form-box {
+  max-width: 500px;
+  margin: auto;
+  padding: 50px;
+  background: #ffffff;
+
 }
+
+h1 { 
+  font-size: 4.0rem; 
+  line-height: 1.2;  
+  letter-spacing: -.1rem;
+  color: white;
+}
+
+h2 { 
+  font-size: 4.0rem; 
+  line-height: 1.2;  
+  letter-spacing: -.1rem;
+  color: black;
+  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.main{
+  display: flex;
+  align-items: center;
+}
+.list_repoItem {
+  list-style: decimal inside;
+  color: black;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+input[type="text"] {
+  font-size:25px;
+}
+
+
+
